stubb in event tags, fix side nav's z-index issue (overlapping sections, preventing clicks)

--- a/src/planbox_ui/static/styles/main.scss
+++ b/src/planbox_ui/static/styles/main.scss
@@ -1248,6 +1248,7 @@ body.shareabouts-panel-hovered {
   height: 1px;
   margin-bottom: 350px;
   overflow: visible;
+  z-index: 1;
 
   &.fixed {
     div {
